--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:name=".TeaShopApplication"
@@ -13,6 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeaShopPOS">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <activity
             android:name=".ui.MainActivity"
@@ -26,6 +38,10 @@
         </activity>
 
         <activity
+            android:name=".ui.ShopMenuActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.POSActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
@@ -36,6 +52,10 @@
 
         <activity
             android:name=".ui.ItemMasterActivity"
+            android:exported="false" />
+        
+        <activity
+            android:name=".ui.ScanMenuActivity"
             android:exported="false" />
 
         <activity
